[package]
name = "send_to_dc_worker"
version = "0.1.0"
edition = "2021"
authors = [" <>"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0" }
worker-macros = { version = "0.6.0" }
console_error_panic_hook = { version = "0.1.7" }
serde = "1.0.219"
serde_json = "1.0.140"
dotenvy = "0.15.7"
